k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-dict
  labels:
    app: blog-dict
    security: dict
