k8s/03-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-backend
  namespace: blog-dict
  labels:
    app: blog-backend
    dict.security/monitored: "true"
spec:
  selector:
    app: blog-backend
  ports:
  - port: 80
    targetPort: http
  type: ClusterIP
