k8s/05-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend
  namespace: blog-dict
  labels:
    app: blog-frontend
    dict.security/monitored: "true"
spec:
  selector:
    app: blog-frontend
  ports:
  - port: 80
    targetPort: waf
    name: http
  type: ClusterIP
