k8s/08-phpmyadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: blog-dict
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: blog-dict
spec:
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
